[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Setting.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[node name="Setting" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 100
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 100.0
margin_right = 490.0
margin_bottom = 910.0
custom_constants/separation = 10

[node name="MusicCheckButton" type="CheckButton" parent="MarginContainer/VBoxContainer"]
margin_right = 440.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 3 )
pressed = true
text = "Music"

[node name="SoundCheckButton" type="CheckButton" parent="MarginContainer/VBoxContainer"]
margin_top = 96.0
margin_right = 440.0
margin_bottom = 182.0
custom_fonts/font = SubResource( 3 )
pressed = true
text = "Sound"

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 192.0
margin_right = 440.0
margin_bottom = 276.0
custom_fonts/font = SubResource( 2 )
text = "Back"
[connection signal="pressed" from="MarginContainer/VBoxContainer/MusicCheckButton" to="." method="_on_MusicCheckButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SoundCheckButton" to="." method="_on_SoundCheckButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
